adding requrie and prototyp 1 :D

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     <script type="text/javascript" src="../bower_components/requirejs/require.js"></script>
     <script type="text/javascript" src="init.js"></script>
 </head>
-<body>
+<body style="margin: 0;">
 
-
+<img src="images/prototyp1.png" style="width: 100%;">
 </body>
 </html>
