outlines and a clock

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 <head>
+
     <link rel="stylesheet/less" type="text/css" href="less/main.less"/>
     <script type="text/javascript" src="../bower_components/requirejs/require.js"></script>
     <script type="text/javascript" src="init.js"></script>
 </head>
-<body style="margin: 0;">
+<body>
 
-<img src="images/prototyp1.png" style="width: 100%;">
+<div class="head black">
+    <div id="clock"></div>
+</div>
+<div class="container">
+    <div class="left green">
+        <div class="calendar grey">
+
+        </div>
+    </div>
+    <div class="right red">
+        <div class="calendar grey">
+
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
