Momentjs added, google calendar added

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <link rel="stylesheet/less" type="text/css" href="less/main.less"/>
     <script type="text/javascript" src="../bower_components/requirejs/require.js"></script>
     <script type="text/javascript" src="init.js"></script>
@@ -12,18 +11,12 @@
     <div id="clock"></div>
 </div>
 <div class="container">
-    <div class="left green">
-        <div class="calendar grey">
-
-        </div>
+    <div class="left green calendar" data-calendarid="unikum.net_3433343233373732333033@resource.calendar.google.com">
+        <pre></pre>
     </div>
-    <div class="right red">
-        <div class="calendar grey">
-
-        </div>
+    <div class="right red calendar" data-calendarid="unikum.net_3433343233373732333033@resource.calendar.google.com">
+        <pre></pre>
     </div>
 </div>
-
-
 </body>
 </html>
